2008-06-12 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/include/rtai_netrpc.h: fixed wrong arg position assignment 
	  for timeout in all of RT_poll.

2008-06-11 Calin A. Culianu <calin@ajvar.org>. 

	* base/include/rtai_posix.h: fixed a couple of bugs related to 
	  cookie creation and initialisiation in kernel space pthread_create.

2008-06-10 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/include/rtai_posix.h: fixed duplicated macro and add 
	  CLOCKREALTIME/MONOTONIC for posix in kernel space; declare
	  handler_wrpr as static to avoid warning of multiple definitions;
	  fixes pointed by: Paul Stein <stein@cepel.br>.
	* base/include/rtai_wrappers.h; define clockid_t and msleep for 
	  posix in kernel space.

2008-06-09 Roberto Bucher <roberto.bucher@supsi.ch>

	* rtai-lab/scilab/*: Some changes to avoid #include <MODEL>.c

2008-06-08 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* testsuite/user/preempt/preempt.c and display.c: consistently 
	  revised against their counterparts in showrrom.
	* base/sched/sched.c: a few changes to the revised oneshot firing
	  to have it work on older Linux versions.

2008-05-29 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/include/rtai_lxrt.h: ensure rt_get_priorities has values to be
	  returned pointers on the stack.

2008-05-25 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/archx86s/hal/hal.immed: use the apic freq from the HAL when 
	  available.

2008-05-24 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/archx86s/hal/hal.immed: discard CLOCKEVENTS if RTC is being
	  used.
	* base/archx86s/hal/rtc.c: revised to work with CLOCKEVENTS.
	* base/sched/sched.c: discard CLOCKEVENTS if RTC is being used.

2008-05-23 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/sched/sched.c: use macros for common parts of revised oneshot
	  programming; ifdef shots overruns to allow using the old mode for
	  testing.
	* base/archx86s/hal and base/include/asm-x86s: revised, with some